Horizontal margin added on name for mobile screen

--- a/src/components/Feedback/Feedback.css
+++ b/src/components/Feedback/Feedback.css
@@ -73,6 +73,8 @@
     font-weight: 200;
     margin-top: 20px;
     margin-bottom: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .made-with-text {
