--- a/src/components/Experience/Experience.css
+++ b/src/components/Experience/Experience.css
@@ -68,6 +68,15 @@
     margin: 20px 0px;
 }
 
+.skills-applied-container {
+    margin-top: 10px;
+}
+
+.company-name-link {
+    color: inherit;
+    text-decoration: none;
+}
+
 @media (max-width: 1020px) {
     .company-logo-container {
         padding: 0px 8px;
